--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "flit_core.buildapi"
 name = "ddenv"
 authors = [{ name = "Sjors Smits", email = "smits.sjors@gmail.com" }]
 readme = "README.md"
-requires-python = ">=3.6"
+requires-python = ">=3.10"
 license = { file = "LICENSE" }
 classifiers = [
     "Programming Language :: Python :: 3",
@@ -14,8 +14,9 @@ classifiers = [
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License"]
 dependencies = [
+    "click-spinner >=0.1.10",
     "docker >=5.0.3",
-    "typer >=0.4.0",
+    "typer[all] >=0.4.0",
 ]
 dynamic = ["version", "description"]
 
